// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderList /> Check how renders Should render everything correctly with one item and type SELL_HISTORY 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm iFRHBp"
  >
    <div
      class="sc-AxirZ ffjCab"
    >
      <div
        class="sc-AxgMl hwvqjC"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <span
          class="sc-fzoLsD gDwpfr"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          <span>
            buyer 
          </span>
          <a
            data-testid="OrderList-user-link"
          >
            <span
              class="sc-AxiKw kWZHmR"
            >
              buyerUser
            </span>
          </a>
        </span>
        <span
          class="sc-fzoLsD jdmsXq"
          color=""
          display="inline-block"
          overflow="visible"
          size="2"
          spacing="0px"
          transform=""
        >
          17 Feb 2021, 02:53
        </span>
      </div>
      <div
        class="sc-AxgMl jkJqGS sc-AxheI iRwFIp"
        data-testid="TransactionAndOrderProdItem"
        direction="row"
        spacing="2"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="TransactionAndOrderProdItem-product-link-photo"
        >
          <div
            class="sc-AxgMl svOkf sc-fzozJi NCIDe"
            data-testid="ProductThumbnail"
            direction="row"
            height="5"
            spacing=""
            width="5"
            wrap="nowrap"
          >
            <img
              alt="product1"
              data-testid="ProductThumbnail-img"
              src="http://192.168.1.109:4000/orders/o1/p1/photo"
            />
          </div>
        </a>
        <div
          class="sc-Axmtr hZLwMP"
        >
          <span
            class="name"
          >
            <a
              data-testid="TransactionAndOrderProdItem-product-link-name"
            >
              product1
            </a>
          </span>
          <div
            class="sc-AxgMl qjbUJ sc-AxmLO TWkCW"
            direction="row"
            spacing=""
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-fzoLsD hEMAaS"
              color="#777"
              display="inline-block"
              overflow="visible"
              size="2"
              spacing="0px"
              transform=""
            >
              2 x $6.40
            </span>
            <span
              class="sc-fzoLsD imJQFB"
              color=""
              display="inline-block"
              overflow="visible"
              size="4"
              spacing="0px"
              transform=""
            >
              $12.80
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-AxgMl jihYKC"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="OrderList-order-details-link"
        >
          <button
            class="sc-fzpans jzBzdz"
            color="blue"
            type="button"
          >
            details
          </button>
        </a>
        <div>
          <span
            class="sc-fzoLsD gUUBaW"
            color="#777"
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="1px"
            transform=""
          >
            TOTAL
          </span>
          <span
            class="sc-fzoLsD cDXFeb"
            color=""
            display="inline-block"
            overflow="visible"
            size="5"
            spacing="0px"
            transform=""
          >
            $12.80
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<OrderList /> Check how renders Should render everything correctly with two items and type PLACED_ORDERS 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm iFRHBp"
  >
    <div
      class="sc-AxirZ ffjCab"
    >
      <div
        class="sc-AxgMl hwvqjC"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <span
          class="sc-fzoLsD gDwpfr"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          <span>
            seller 
          </span>
          <a
            data-testid="OrderList-user-link"
          >
            <span
              class="sc-AxiKw kWZHmR"
            >
              sellerUser
            </span>
          </a>
        </span>
        <span
          class="sc-fzoLsD jdmsXq"
          color=""
          display="inline-block"
          overflow="visible"
          size="2"
          spacing="0px"
          transform=""
        >
          8 Jan 2021, 12:08
        </span>
      </div>
      <div
        class="sc-AxgMl jkJqGS sc-AxheI iRwFIp"
        data-testid="TransactionAndOrderProdItem"
        direction="row"
        spacing="2"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="TransactionAndOrderProdItem-product-link-photo"
        >
          <div
            class="sc-AxgMl svOkf sc-fzozJi NCIDe"
            data-testid="ProductThumbnail"
            direction="row"
            height="5"
            spacing=""
            width="5"
            wrap="nowrap"
          >
            <img
              alt="product1"
              data-testid="ProductThumbnail-img"
              src="http://192.168.1.109:4000/orders/o1/p1/photo"
            />
          </div>
        </a>
        <div
          class="sc-Axmtr hZLwMP"
        >
          <span
            class="name"
          >
            <a
              data-testid="TransactionAndOrderProdItem-product-link-name"
            >
              product1
            </a>
          </span>
          <div
            class="sc-AxgMl qjbUJ sc-AxmLO TWkCW"
            direction="row"
            spacing=""
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-fzoLsD hEMAaS"
              color="#777"
              display="inline-block"
              overflow="visible"
              size="2"
              spacing="0px"
              transform=""
            >
              4 x $4
            </span>
            <span
              class="sc-fzoLsD imJQFB"
              color=""
              display="inline-block"
              overflow="visible"
              size="4"
              spacing="0px"
              transform=""
            >
              $16
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-AxgMl jkJqGS sc-AxheI iRwFIp"
        data-testid="TransactionAndOrderProdItem"
        direction="row"
        spacing="2"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="TransactionAndOrderProdItem-product-link-photo"
        >
          <div
            class="sc-AxgMl svOkf sc-fzozJi NCIDe"
            data-testid="ProductThumbnail"
            direction="row"
            height="5"
            spacing=""
            width="5"
            wrap="nowrap"
          >
            <img
              alt="product2"
              data-testid="ProductThumbnail-img"
              src="no-photo.png"
            />
          </div>
        </a>
        <div
          class="sc-Axmtr hZLwMP"
        >
          <span
            class="name"
          >
            <a
              data-testid="TransactionAndOrderProdItem-product-link-name"
            >
              product2
            </a>
          </span>
          <div
            class="sc-AxgMl qjbUJ sc-AxmLO TWkCW"
            direction="row"
            spacing=""
            width="100%"
            wrap="nowrap"
          >
            <span
              class="sc-fzoLsD hEMAaS"
              color="#777"
              display="inline-block"
              overflow="visible"
              size="2"
              spacing="0px"
              transform=""
            >
              2 x $6.40
            </span>
            <span
              class="sc-fzoLsD imJQFB"
              color=""
              display="inline-block"
              overflow="visible"
              size="4"
              spacing="0px"
              transform=""
            >
              $12.80
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-AxgMl jihYKC"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <a
          data-testid="OrderList-order-details-link"
        >
          <button
            class="sc-fzpans jzBzdz"
            color="blue"
            type="button"
          >
            details
          </button>
        </a>
        <div>
          <span
            class="sc-fzoLsD gUUBaW"
            color="#777"
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="1px"
            transform=""
          >
            TOTAL
          </span>
          <span
            class="sc-fzoLsD cDXFeb"
            color=""
            display="inline-block"
            overflow="visible"
            size="5"
            spacing="0px"
            transform=""
          >
            $28.80
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
